feat: Add TemplateService for rendering templates and extracting placeholders
feat: Set up Docker Compose for MailerSlave v2.0 with MongoDB, FastAPI, and Next.js

docs: Create ARCHITECTURE_V2.md to document the architecture and data models of MailerSlave v2.0

chore: Add .env.example for frontend environment variables

build: Create Dockerfile for frontend with Next.js setup

feat: Implement Campaigns page in frontend with data fetching

feat: Implement Contacts page in frontend with CRUD operations

feat: Create Emails page in frontend to display email logs

style: Add global styles with Tailwind CSS for frontend

feat: Set up layout and navigation for frontend application

feat: Create Dashboard page to display statistics and recent campaigns

feat: Implement Templates page to list email templates

build: Configure Next.js with environment variables and necessary packages

chore: Add Tailwind CSS configuration for styling

chore: Set up PostCSS for Tailwind CSS processing

chore: Initialize TypeScript configuration for frontend

chore: Create start.sh script for quick start of MailerSlave services

--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,8 @@
-# Example .env configuration file for MailerSlave
+# Example .env configuration file for MailerSlave v2.0
+
+# MongoDB Configuration
+MONGODB_URL=mongodb://localhost:27017
+MONGODB_DATABASE=mailerslave
 
 # SMTP Configuration
 SMTP_HOST=smtp.gmail.com
@@ -10,11 +14,8 @@ SMTP_FROM_EMAIL=your-email@gmail.com
 
 # Ollama Configuration
 OLLAMA_MODEL=llama2
-# OLLAMA_HOST=http://localhost:11434
+OLLAMA_HOST=http://localhost:11434
 OLLAMA_TEMPERATURE=0.7
 
-# Email Configuration
-EMAIL_SUBJECT=Personalized Email
-
-# Testing
-DRY_RUN=false
+# Application
+DEBUG=false
