--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,25 +9,25 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1",
-    "next": "^14.2.0",
     "@tanstack/react-query": "^5.28.0",
+    "autoprefixer": "^10.4.18",
     "axios": "^1.6.7",
     "date-fns": "^3.3.1",
     "lucide-react": "^0.344.0",
+    "next": "^15.1.4",
+    "postcss": "^8.4.35",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
     "react-hook-form": "^7.51.0",
     "sonner": "^1.4.3",
-    "tailwindcss": "^3.4.1",
-    "autoprefixer": "^10.4.18",
-    "postcss": "^8.4.35"
+    "tailwindcss": "^3.4.1"
   },
   "devDependencies": {
     "@types/node": "^20.11.24",
     "@types/react": "^18.2.61",
     "@types/react-dom": "^18.2.19",
-    "typescript": "^5.3.3",
-    "eslint": "^8.57.0",
-    "eslint-config-next": "^14.2.0"
+    "eslint": "^9.0.0",
+    "eslint-config-next": "^15.1.4",
+    "typescript": "^5.3.3"
   }
 }
